# iranianac-assistant-bot

./: .gitignore  Cargo.toml  README.md
bot/: Cargo.toml
bot/src/: filters.rs  handlers.rs  main.rs  persian_date.rs  prelude.rs  reminder.rs
bot/src/db/: class_manager.rs  mod.rs  settings.rs
bot/src/models/: class_model.rs  mod.rs
lib/lib-common/: Cargo.toml
lib/lib-common/src/: channel_logger.rs  date_time_helpers.rs  lib.rs  logs.rs
