[workspace]
members = ["lib/lib-common", "bot"]
resolver = "2"

[workspace.dependencies]
eyre = "0.6.12"
simple_logger = "4.3.3"
log = "0.4.20"
log4rs = "1.3"
dotenv = "0.15.0"
sqlx = { version = "0.7.3", default-features = false, features = [
    "postgres",
    "runtime-tokio",
    "macros",
    "chrono",
] }
tokio = { version = "1.36.0", features = [
    "macros",
    "tracing",
    "rt-multi-thread",
] }
teloxide = { git = "https://github.com/teloxide/teloxide", features = [
    "default",
    "macros",
    "sqlx",
] }
lazy_static = "1.4.0"
chrono = "0.4.3"
reqwest = { version = "0.11.24", features = ["json"] }
