[package]
name = "assistant-bot"
version = "0.1.0"
edition = "2021"


[dependencies]
lib-common = { path = "../lib/lib-common" }
tokio = { workspace = true }
log = { workspace = true }
eyre = { workspace = true }
teloxide = { workspace = true }
dotenv = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
lazy_static = { workspace = true }
reqwest = { workspace = true }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
#redis = {git = "https://github.com/redis-rs/redis-rs.git", features =["tokio-comp","connection-manager"]}